--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="src/assets/styles/style.css">
+  <link rel="stylesheet" href="assets/styles/style.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="src/index.js" type="module"></script>
+  <script src="index.js" type="module"></script>
+  <script src="sweetalert2.all.min.js"></script>
 </body>
 
 </html>
