--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="root"></div>
   <script src="index.js" type="module"></script>
-  <script src="sweetalert2.all.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
